fix: overflow-y hover in cart

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,4 +6,25 @@
   body {
     @apply min-h-screen text-foreground bg-background;
   }
+
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #616062 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  *::-webkit-scrollbar-track {
+    @apply bg-background;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #616062;
+    border-radius: 10px;
+    border: 3px none #ffffff;
+  }
 }
